@@ -69,6 +69,7 @@
        <Variable name="db">changeme</Variable>
        <Variable name="server">localhost</Variable>
        <Variable name="port">6789</Variable>
+       <Property name="retrieveMessagesFromServerOnGetMessage">true</Property>
    </Driver>
    
    <Driver name="mysql" 
